# link-shrink

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  alembic.ini  buildspec.yml  pyproject.toml  requirements-dev.txt
.development-docs/: LinkShrink_BRD.md  LinkShrink_Epic_Plan.md  LinkShrink_TDD.md  LinkShrink_UI_UX_Guide.md
.github/workflows/: tests.yml
frontend/: .gitignore  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  navigation.ts
infra/: build-push.sh  cert.sh  deploy-on-host.sh  deployspec.yml  docker-compose.prod.yml  docker-compose.yml  loadtest.ps1  up.ps1
infra/docker/: api.Dockerfile  frontend-build.Dockerfile  migrate.Dockerfile  nginx.Dockerfile  python-base.Dockerfile  redirect.Dockerfile  worker.Dockerfile
infra/loadtest/: README.md  parse_nginx_p95.py  run_load_test.py
infra/nginx/: docker-entrypoint.sh  nginx.conf
infra/terraform/: .gitignore  codebuild.tf  codepipeline.tf  compute.tf  data.tf  dns.tf  ecr.tf  eip.tf  iam-ci.tf  iam.tf  (+7 more)
migrations/: env.py
services/api/: pyproject.toml
services/api/src/linkshrink_api/: __init__.py  analytics.py  dependencies.py  errors.py  main.py  metrics.py  pagination.py  persistence.py  qr.py  schemas.py  urls.py
services/api/src/linkshrink_api/routers/: __init__.py  links.py  system.py
services/redirect/: pyproject.toml
services/redirect/src/linkshrink_redirect/: __init__.py  dependencies.py  main.py  resolution.py
services/redirect/src/linkshrink_redirect/routers/: __init__.py  redirect.py  system.py
services/worker/: pyproject.toml
services/worker/src/linkshrink_worker/: __init__.py  config.py  consumer.py  healthcheck.py  main.py  parsing.py  processing.py  purge.py
tests/: conftest.py  test_api_links.py  test_cache.py  test_config.py  test_loadtest_parse.py  test_migrations.py  test_queue.py  test_redirect.py  test_shortcode.py  test_smoke.py  test_system.py  test_validation.py  test_worker.py
(+113 files in other folders)
