[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "linkshrink_redirect"
version = "0.1.0"
description = "LinkShrink redirect service: resolves short codes to 302 redirects and queues click events (FastAPI)."
requires-python = ">=3.12"
dependencies = [
    "linkshrink_shared",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
]

[tool.setuptools.packages.find]
where = ["src"]
