[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "linkshrink_worker"
version = "0.1.0"
description = "LinkShrink analytics worker: consumes the click stream, derives PII-free fields, and writes ClickEvent rows (asyncio)."
requires-python = ">=3.12"
dependencies = [
    "linkshrink_shared",
    "user-agents>=2.2",
]

[tool.setuptools.packages.find]
where = ["src"]
